--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -3,7 +3,11 @@
 one:
   rating: 1
   comment: MyText
+  name: MyString
+  email: MyString
 
 two:
   rating: 1
   comment: MyText
+  name: MyString
+  email: MyString
